--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
+    "jsonwebtoken": "^7.2.1",
     "knex": "^0.11.10",
+    "moment": "^2.17.1",
     "morgan": "~1.7.0",
     "nunjucks": "^2.4.2",
     "passport": "^0.3.2",
