--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "bcrypt-as-promised": "^1.1.0",
-    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "cookie-session": "^2.0.0-alpha.2",
