--- a/.jshintrc
+++ b/.jshintrc
@@ -13,7 +13,8 @@
     "waitsFor": false,
     "runs": false,
     "$": false,
-    "confirm": false
+    "confirm": false,
+    "asi": true
   },
   "esnext": true,
   "node" : true,
