--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
+    "express-validator": "^3.1.2",
     "jsonwebtoken": "^7.2.1",
     "knex": "^0.11.10",
     "moment": "^2.17.1",
