--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,4 @@ services:
   - postgresql
 before_script:
   - psql -c 'create database supernova_test;' -U postgres
+  - npm run knex migrate:latest
