--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ services:
 before_script:
   - psql -c 'create database supernova_test;' -U postgres
   - psql -f ./src/server/db/tableCreation.sql -d supernova_test
+addons:
+  postgresql: 9.6
