--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 services:
   - postgresql
 before_script:
-  - psql -c 'create database supernova_test;' -U postgres
+  - psql -U postgres -c 'CREATE DATABASE supernova_test;'
   - psql -f ./src/server/db/tableCreation.sql -d supernova_test
 addons:
   postgresql: 9.6
